@@ -1,5 +1,5 @@
 /*
-    Copyright 2001-2010, Felspar Co Ltd. http://support.felspar.com/
+    Copyright 2001-2013, Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -88,7 +88,8 @@ namespace fostlib {
     }
 
 
-    FOST_CORE_DECLSPEC void absorbException() throw ();
+    /// Call this whenever an exception is thrown away so that it break points can be set easily
+    FOST_CORE_DECLSPEC void absorb_exception() throw ();
 
 
 }
